La til kodeverkendringer som introduserer VIRKSOMHET aktoerrolle. Endret fra ARBEIDSGIVER til VIRKSOMHET der det er korrekt.